FlightPath 6.x Changelog
========================

2022-03-28
  Minor change in System.  When trimming watchdog table of DEBUG statements, made sure that "max age" was an int using intval().
  
  Fixed bug in core's course search edit submit, where it would never work.  Probably a result of my recent work.
  

2022-03-25
  Adjusted look of textareas in form elements to have similar rounded corners and such as text fields.


2022-03-22
  Added hook to course_search, so that other modules can modify the "course not scheduled" result.  See new file course_search.api.php.
  
  For the pager_query() functionality, look for value in $_REQUEST instead of just $_GET.
  

2022-03-21
  Added hook to course_search, so that other modules can modify the "course rotation schedule".  See new file course_search.api.php.


2022-03-20
  Changed how we cache the course inventory.  Now using a file to cache to hard disk, making it much faster to read into memory than using multiple database queries.
  
  When applying draft changes, the courses cache file is automatically deleted and re-written.
  
  Added indexs for courses and draft_courses for the exclude and delete_flag columns.
  
  Added new cache variable which lets us know when course cache was last generated.  Users will check that variable in key places to see if they need to reload
  their course inventory from file.
  
  Moved the logic for generating and saving the course inventory to the system module, to make it easier to work with.
    

2022-03-19
  Altered prereqs module to better explain how it's hook system works.  Added prereqs.api.php to describe hooks.
  
  Added new column to advising sessions:  most_recent_session.  This will be set to 1 (one) if this is the most recent advising session (across multiple terms)
  for the student.  Otherwise, will be zero.  This helps in certain queries and reports. 
  